--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@capacitor/core": "^1.0.0-alpha.38",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.4.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
