--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "predev": "touch .hot",
-    "prebuild": "rm -f .hot ",
-    "postbuild": "rm -rf ./dist/*.html",
     "lint": "vue-cli-service lint",
     "capacitor-copy": "vue-cli-service capacitor-copy",
     "capacitor-init": "vue-cli-service capacitor-init",
     "capacitor-open": "vue-cli-service capacitor-open",
     "capacitor-update": "vue-cli-service capacitor-update",
+    "dev": "yarn serve",
+    "postbuild": "rm -rf ./dist/*.html",
+    "prebuild": "rm -f .hot ",
+    "predev": "touch .hot",
     "start": "npm run serve -- --port 9876"
   },
   "dependencies": {
     "@capacitor/cli": "^1.0.0-alpha.38",
     "@capacitor/core": "^1.0.0-alpha.38",
+    "iview": "^3.0.1",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
@@ -32,10 +33,12 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "assets-webpack-plugin": "^3.9.7",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.8.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-pwa": "^1.0.0-alpha.1",
     "vue-template-compiler": "^2.5.21",
     "webpack-assets-manifest": "^3.1.1",
